namespace ZooParkApp.interfaces;

public interface IFlying
{
    public string Flying();
}