namespace ZooParkApp.interfaces;

public interface ISwimming
{
    public string Swimming();
}