namespace ZooParkApp.interfaces;

public interface IWalking
{
    public string Walking();
}