namespace ZooParkApp.models.animals;

public abstract class Animal
{
    public string Kind { get; init; }
}