namespace ZooParkApp.zoo;

public enum AnimalType
{
    Unknown,
    Bird,
    Fish,
    Insect,
    Mammalia
}