namespace ZooParkApp.zoo;

public enum AviaryType
{
    Unknown,
    Aqua,
    Land
}